--- a/html/index.html
+++ b/html/index.html
@@ -47,7 +47,7 @@
  
 <div id="dwc">
     <img id="home" onclick="home()" src="/icon/home.png">
-    <img id="add" onclick="da()" src="/icon/add.png">
+    <img id="add" onclick="frandom()" src="/icon/1add.png">
     <img id="close" onclick="was()" src="/icon/close.png">
 </div>
 
@@ -99,16 +99,16 @@
 <div id="struktur1">
     <div onclick="document.location.replace('/dino/html/menu.html')" class="u" id="hed"></div>
     <div onclick="afw()" class="u" id="hed1"></div>
-    <div class="u" id="hed2"></div>
-    <div class="u" id="hed3"></div>
+    <div class="u" id="hed2" onclick="cekinf()"></div>
+    <div class="u" id="hed3" onclick="cekinf()"></div>
     <div class="u" id="hed4"></div>
 </div>
 
 <div id="struktur2">
     <div onclick="document.location.replace('/dino/html/menu.html')" class="u" id="st2hed"></div>
     <div onclick="afw()" class="u" id="st2hed1"></div>
-    <div class="u" id="st2hed2"></div>
-    <div class="u" id="st2hed3"></div>
+    <div class="u" id="st2hed2" onclick="cekinf()"></div>
+    <div class="u" id="st2hed3" onclick="cekinf()"></div>
     <div class="u" id="st2hed4"></div>
 </div>
 
