--- a/html/index.html
+++ b/html/index.html
@@ -92,7 +92,7 @@
     <h1   onclick=" document.location.replace('/users/homevika.html')" id="gf4">Vika</h1>
 
 </div>
-<div onclick="document.location.replace('index.html')" id="awdf"></div>
+<div onclick="document.location.replace('/html/index.html')" id="awdf"></div>
     
 </div>
 
