--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Every</title>
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    
+
 
 <!--  _    _                  .      _    _
      / \  / \      /\    \ /  |     / \  / \ 
@@ -92,12 +92,12 @@
     <h1   onclick=" document.location.replace('/users/homevika.html')" id="gf4">Vika</h1>
 
 </div>
-<div onclick="document.location.replace('/html/index.html')" id="awdf"></div>
+<div onclick="document.location.replace('/htindex.html')" id="awdf"></div>
     
 </div>
 
 <div id="struktur1">
-    <div onclick="document.location.replace('/dino/html/menu.html')" class="u" id="hed"></div>
+    <div onclick="document.location.replace('https://dinoose.herokuapp.com/')" class="u" id="hed"></div>
     <div onclick="afw()" class="u" id="hed1"></div>
     <div class="u" id="hed2" onclick="cekinf()"></div>
     <div class="u" id="hed3" onclick="cekinf()"></div>
@@ -105,7 +105,7 @@
 </div>
 
 <div id="struktur2">
-    <div onclick="document.location.replace('/dino/html/menu.html')" class="u" id="st2hed"></div>
+    <div onclick="document.location.replace('https://dinoose.herokuapp.com/')" class="u" id="st2hed"></div>
     <div onclick="afw()" class="u" id="st2hed1"></div>
     <div class="u" id="st2hed2" onclick="cekinf()"></div>
     <div class="u" id="st2hed3" onclick="cekinf()"></div>
