--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Every</title>
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content="443475812093-s4n045egch9meaiclcs4ainfnopob8nm.apps.googleusercontent.com">
     <script>
     
     function checkOnlineState(){
@@ -32,6 +33,8 @@
 //setInterval(checkOnlineState,10)
 
 
+
+
     </script>
 <!--  _    _                  .      _    _
      / \  / \      /\    \ /  |     / \  / \ 
@@ -39,6 +42,7 @@
    /          \  /    \  / \  |   /          \
 -->
 </head>
+<div class="g-signin2" data-onsuccess="onSignIn"></div>
 
 <div id="register">
 
@@ -52,7 +56,6 @@
 <div id="ew">
     <input id="cad">
 </div>
-
 
 
 <div id="awl">
