--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,24 @@
 
 //setInterval(checkOnlineState,10)
 
+function onSignIn(googleUser) {
+    // Useful data for your client-side scripts:
+    var profile = googleUser.getBasicProfile();
+    console.log('ID: ' + profile.getId()); // Don't send this directly to your server!
+    console.log('Full Name: ' + profile.getName());
+    console.log('Given Name: ' + profile.getGivenName());
+    console.log('Family Name: ' + profile.getFamilyName());
+    console.log('Image URL: ' + profile.getImageUrl());
+    console.log('Email: ' + profile.getEmail());
+    
+    localStorage.dw = profile.getName()
 
+
+    alert(profile.getName())
+
+
+
+}  
 
 
     </script>
